Made code concatenate numbers and added delete button
Made code concatenate numbers and added delete button

--- a/calculator.html
+++ b/calculator.html
@@ -79,15 +79,38 @@
                         <button class="calc-number" onclick="handleNumberPress(9)">9</button>
                     </div>
                 </div>
+                 <div class="calc-row">
+                    <div class="calc-col">
+                        <button class="calc-number" onclick="dols()">Delete</button>
+                    </div>  
                 <div class="calc-row">
                     <div class="calc-col">
                         <button class="calc-number" onclick="handleNumberPress(0)">0</button>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script type="text/javascript"> 
+                    var finalDisplay = "";
+                    var display = document.getElementById("outputContent") 
+                    function displayer(){
+                        display.innerHTML = finalDisplay
+                    } 
+                    function handleNumberPress(number) {
+                       finalDisplay = finalDisplay + "" + number;
+                       displayer()
+                    }
+                    function dols(){
+                        finalDisplay = finalDisplay.substr(0, finalDisplay.length-1);
+                        displayer()
+                    };
+                    
+
+
+
+        </script>
     </body>
 </html>
